# Selray

./: README.md  SeleniumSpray.py  Selray.py  pyproject.toml  requirements.txt
selray/: Selray.py
selray/modes/: adfs.toml  azure-duo.toml  azure-gcc.toml  azure.toml  google.toml  office365.toml  okta.toml  owa.toml  quicklaunch.toml  sophos.toml
selray/utils/: Arguments.py  SprayConfig.py  __init__.py  attempt_login.py  aws.py  azure-proxy.py  azure_proxy.py  credential_stuffing.py  import_files.py  prepare_variables.py  spray.py  update.py  utils.py  write_output_files.py
selray/utils/Azure/: AzureAuth.py  CheckProxy.py  CreateVM.py  DeleteVM.py  GetMyInfo.py  ListVMs.py  RotateIP.py  SSHKeyGen.py  StartStopVM.py  __init__.py
utils/: aws.py  utils.py
