[project]
name = "selray"
version = "0.4"
description = "Password spraying utility that uses Selenium to emulate a real user and cloud-based proxies for IP rotation."
authors = [
  { name="Luke Lauterbach" }
]
dependencies = [
    "alive_progress",
    "boto3",
    "rich",
    "selenium",
    "paramiko",
    "pause",
]

# If you have local helper modules (e.g., utils.py, aws.py), pipx will still work because they're imported locally.

[project.scripts]
selray = "Selray:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"