[project]
name = "selray"
version = "0.6"
description = "Password spraying utility that uses Selenium to emulate a real user and cloud-based proxies for IP rotation."
authors = [
  { name="Luke Lauterbach" }
]
dependencies = [
    "alive_progress",
    "boto3",
    "requests",
    "rich",
    "selenium",
    "seleniumbase",
    "paramiko",
    "pause",
    "toml"
]

# If you have local helper modules (e.g., utils.py, aws.py), pipx will still work because they're imported locally.

[project.scripts]
selray = "selray.Selray:main"

[tool.setuptools.package-data]
"selray.modes" = ["*.toml"]

[tool.setuptools.packages.find]
where = ["."]
include = ["selray*", "utils*"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"